manifests/opengist/resources/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opengist
  labels:
    app.kubernetes.io/name: opengist
    app.kubernetes.io/instance: opengist
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gist.vrsf.in`)
      kind: Rule
      services:
        - name: opengist
          port: http
  tls:
    certResolver: letsencrypt
